--- a/css/style.css
+++ b/css/style.css
@@ -21,22 +21,12 @@ body {
     align-items: center;
 }
 
-/* figure{
-    width: 408px;
-    height: 400px;
-    background-image: url("../img/tomato.png");
-    background-size: cover;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-} */
-
 h1 {
     font-family: 'Pacifico', sans-serif;
-    font-size: 65px;
+    font-size: 60px;
     color: #333;
     text-align: center;
-    margin: 50px auto;
+    margin: 30px auto;
 }
 
 #pomodoro {
@@ -52,12 +42,13 @@ h1 {
 }
 
 .tomato {
-    width: 500px;
-    height: 500px;
+    width: 350px;
+    height: 350px;
     position: relative;
 
     background-image: url("../img/tomato.png");
     background-size: contain;
+    object-fit: cover;
 
     align-items: center;
     justify-content: center;
@@ -69,7 +60,7 @@ h1 {
 
 .timer-status {
     color: #f1efef;
-    font-size: 60px;
+    font-size: 40px;
     font-weight: bold;
     position: absolute;
     top: 40%;
@@ -100,11 +91,11 @@ h1 {
 .controls .focus-session,
 .controls .break-session {
     width: 300px;
-    margin-top: 50px;
+    margin-top: 20px;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    font-size: 40px;
+    font-size: 30px;
     gap: 5px;
 }
 
@@ -116,7 +107,6 @@ h1 {
 .controls .break-session #break-time {
     width: 100%;
     text-align: center;
-    margin: 16px;
     font-weight: bold;
     
 }
@@ -125,14 +115,13 @@ h1 {
 .controls .focus-session #break-time,
 .controls .break-session #focus-time,
 .controls .break-session #break-time {
-    font-size: 30px;
+    font-size: 20px;
     color: #101010;
 }
 
 .btn-minus,
 .btn-plus {
-    width: 50px;
-    padding: 8px;
+    width: 40px;
     cursor: pointer;
     background: #4f8760;
     border: none;
@@ -142,7 +131,7 @@ h1 {
 }
 
 .buttons {
-    margin: 30px auto;
+    margin: 10px auto;
     text-align: center;
 }
 
@@ -162,47 +151,6 @@ button:hover {
     background-color: #ffffff;
     border: 2px solid #4f8760;
     color: #4f8760;
-}
-
-/* .stretching h2{
-    display: flex;
-    flex-direction: column;
-    font-size: 30px;
-}
-
-#stretching-container {
-    width: 350px;
-    height: 310px;
-    margin-bottom: 25px;
-} */
-
-
-/* 
-.btnn {
-    height: 40px;
-    border-radius: 20px;
-    background: #4f8760;
-    border: 2px solid white;
-    padding: 5px; 
-    color:#fff;
-}
-
-.btnn.start{
-    width: 100px;
-    margin: 20px;
-}
-.btnn.pause{
-    width:150px;
-} */
-
-
-
-.box-botoes{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    height: 120px;
 }
 
 .modal-content {
