--- a/css/style.css
+++ b/css/style.css
@@ -108,7 +108,7 @@ h1 {
     width: 100%;
     text-align: center;
     font-weight: bold;
-    
+
 }
 
 .controls .focus-session #focus-time,
@@ -151,6 +151,9 @@ button:hover {
     background-color: #ffffff;
     border: 2px solid #4f8760;
     color: #4f8760;
+    border-radius: var(--bs-modal-border-radius);
+    outline: 0;
+    right: 150px;
 }
 
 .modal-content {
@@ -166,4 +169,51 @@ button:hover {
     border-radius: var(--bs-modal-border-radius);
     outline: 0;
     right: 150px;
+}
+
+
+.btnn.exercicio {
+    width: 200px;
+}
+
+
+.modal-body {
+    background-color: #fff;
+}
+
+.modal-header {
+    background-color: #e6d1b1;
+}
+
+.modal-title {
+    width: 100%;
+    text-align: center;
+    color: #4e4e4e;
+    font-family: 'Pacifico', sans-serif;
+}
+
+.modal-footer {
+    background-color: #e6d1b1;
+}
+
+.btn-primary {
+    background-color: #ffffff;
+    border: none;
+    color: #4f8760;
+    --bs-btn-hover-bg: #4f8760;
+    --bs-btn-hover-border-color: none;
+    --bs-btn-active-bg: #4f8760;
+    --bs-btn-disabled-bg: #4f8760;
+    --bs-btn-active-border-color: none;
+}
+
+.btn-secondary {
+    background-color: #ffffff;
+    border: none;
+    color: #4f8760;
+    --bs-btn-hover-bg: #4f8760;
+    --bs-btn-hover-border-color: none;
+    --bs-btn-active-bg: #4f8760;
+    --bs-btn-disabled-bg: #4f8760;
+    --bs-btn-active-border-color: none;
 }
